2018-06-11  Stipe Tolj  <stolj at kannel.org>
    * gwlib/gw_uuid.c: ensure we handle SunOS (Solaris) for SIOCGIFHWADDR.
    * gwlib/log.c: define syslog facility names for SunOS (Solaris).
    Minor patchset to support Solaris 11 (SunOS 5.11) builds again.
    
2018-03-23  Stipe Tolj  <stolj at kannel.org>
    * configure.in: fixing r5201, which breaks openssl function testing for any
      older openssl versions, i.e. 0.9.8f, since the version checking doesn't
      handle 0.x correct. We rather use the AC_CHECK_VERSION() construct for 
      this and remove all characters from the version string first.

2018-03-22  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr_cass.c: fix obvious copy-and-paste typo. NLC.

2018-03-08  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: fix enforced meta-data data_coding handling when
      getting coding = DC_7BIT (hence UTF-8), but want to enforce to Unicode.
      In this case we would have sticked to UTF-8 in the payload, but declared
      it as data_coding = 0x00 (indicating GSM 03.38), which is wrong of course.
      
2018-02-28 Alexander Malysh <amalysh at kannel.org>
    * added support for openssl version > 1.1

2018-02-14 Alexander Malysh <amalysh at kannel.org>
    * test/test_http.c: fixed compilation error.

2018-02-14 Alexander Malysh <amalysh at kannel.org>
    * configure.in: fixed deprecation warnings.

2018-01-17 Alexander Malysh <amalysh at kannel.org>
    * updated Copyright year.

2018-01-17 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: fixed copy & paste error. This fixes #773.

2017-11-29 Alexander Malysh <amalysh at kannel.org>
    * configure: moved utils compile to extra Makefile.am and fixed conditional
      make for start-stop-daemon.

2017-11-21 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: fixed copy & paste error. This fixes #772.

2017-11-21  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document hard-coded 'data_coding' value